[package]
name = "clap-config"
version = "0.1.0"
edition = "2021"
description = "Add clap (or serde::Deserializeable) structs to config when adding sources to config builder."
license = "MIT"
authors = ["Daniel Alexander Apatiga <dapatiga@gmail.com>"]

[lib]
name="clap_config"
proc-macro = false
crate-type=["lib"]


[features]


[dependencies]
config = "0.14.0"
serde_json = {  version = "1.0.128" }
serde = {version="1.0.210"}