[package]
name = "struct-to-config"
version = "0.1.6"
edition = "2021"
description = "Add clap (or serde::Serializable) structs to config when adding sources to config builder."
license = "MIT"
repository = "https://github.com/morphytron/clap-config"
homepage = "https://www.pickupleague.com/"
readme = "README.md"
authors = ["Daniel Alexander Apatiga <dapatiga@gmail.com>"]

[lib]
name="struct_to_config"
proc-macro = false
crate-type=["lib"]


[features]


[dependencies]
config = "0.14.0"
serde_json = {  version = "1.0.128" }
serde = {version="1.0.210"}
lazy_static = "1.5.0"